--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -9,16 +9,59 @@ body {
     background-color: #222222;
 }
 
-#header, #footer {
+#header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 70px; /* Adjust this value to make the header bigger or smaller */
+    padding: 10px 0;
+    background-color: #11998e;
+    color: #fff;
+    text-align: center;
+}
+
+#header h1 {
+    font-size: 1.5rem; /* Adjust this value to make the text bigger or smaller */
+    margin-left: 20px; /* Adjust this value to increase or decrease the left margin */
+    float: left;
+    line-height: 70px; /* Aligns the text vertically */
+}
+
+#navbar {
+    float: right;
+    margin-right: 20px; /* Adjust this value to increase or decrease the right margin */
+}
+
+#navbar ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    line-height: 70px; /* Aligns the links vertically */
+}
+
+#navbar ul li {
+    float: left;
+}
+
+#navbar ul li a {
+    display: block;
+    color: #fff;
+    text-align: center;
+    padding: 0 16px;
+    text-decoration: none;
+}
+
+#navbar ul li a:hover {
+    background-color: #38ef7d; /* Changes the background color when you hover over a link */
+}
+
+#footer {
     background-color: #11998e;
     color: #fff;
     text-align: center;
     padding: 10px 0;
-}
-
-#navbar ul li a {
-    color: #fff;
-    text-decoration: none;
 }
 
 .form__group {
@@ -80,4 +123,18 @@ body {
 
 .form__field:required, .form__field:invalid {
     box-shadow: none;
+}
+
+.row {
+    display: flex;
+    justify-content: space-between;
+}
+
+.section {
+    flex: 1;
+    margin-right: 10px;
+}
+
+.section:last-child {
+    margin-right: 0;
 }
