--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,13 +25,13 @@
                 <div class="section">
                     <div class="form__group">
                         <input type="text" id="sat" name="sat" class="form__field">
-                        <label for="sat" class="form__label">SAT Score:</label>
+                        <label for="sat" class="form__label">SAT:</label>
                     </div>
                 </div>
                 <div class="section">
                     <div class="form__group">
                         <input type="text" id="act" name="act" class="form__field">
-                        <label for="act" class="form__label">ACT Score:</label>
+                        <label for="act" class="form__label">ACT:</label>
                     </div>
                 </div>
             </div>      
@@ -39,31 +39,27 @@
             <!-- For the SAT II Scores and AP Exam Scores row -->
             <div class="row">
                 <div class="section">
-                    <div class="form__group">
-                        <div id="sat2">
-                            <div>
-                                <label for="sat2-checkbox" class="form__label">SAT II Scores</label>
-                                <input type="checkbox" id="sat2-checkbox" onclick="toggleInput('sat2')">
-                            </div>
-                            <div id="sat2-input" style="display: none;">
-                                <input type="text" name="sat2" class="form__field"><br>
-                            </div>
+                    <div class="form__group field-checkbox">
+                        <label for="sat2-checkbox" class="form__label">
+                            SAT II: 
+                            <input type="checkbox" id="sat2-checkbox" onclick="toggleInput('sat2')">
+                        </label>
+                        <div id="sat2-input" style="display: none;">
+                            <input type="text" name="sat2" class="form__field"><br>
                         </div>
                     </div>
                 </div>
                 <div class="section">
-                    <div class="form__group">
-                        <div id="ap">
-                            <div>
-                                <label for="ap-checkbox" class="form__label">AP Exam Scores</label>
-                                <input type="checkbox" id="ap-checkbox" onclick="toggleInput('ap')">
-                            </div>
-                            <div id="ap-input" style="display: none;">
-                                <input type="text" name="ap" class="form__field"><br>
-                            </div>
+                    <div class="form__group field-checkbox">
+                        <label for="ap-checkbox" class="form__label">
+                            AP Exam: 
+                            <input type="checkbox" id="ap-checkbox" onclick="toggleInput('ap')">
+                        </label>
+                        <div id="ap-input" style="display: none;">
+                            <input type="text" name="ap" class="form__field"><br>
                         </div>
                     </div>
-                </div>
+                </div>                                
                 <div class="section"></div>
             </div>
 
@@ -71,9 +67,9 @@
             <div class="row">
                 <div class="section">
                     <div class="form__group">
-                        <label for="university" class="form__label">Select University:</label><br>
+                        <label for="university" class="form__label">University:</label><br>
                         <select id="university" name="university" class="form__field">
-                            <option value="university1">University 1</option>
+                            <option value="university1">WashU</option>
                             <option value="university2">University 2</option>
                             <option value="university3">University 3</option>
                         </select><br>
