added spreadsheets + backend preprocessing for data

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -69,9 +69,9 @@
                     <div class="form__group">
                         <label for="university" id="university-label" class="form__label">University:</label>
                         <select id="university" name="university" class="form__field">
-                            <option value="university1">WashU</option>
-                            <option value="university2">University 2</option>
-                            <option value="university3">University 3</option>
+                            <option value="Washington University in St. Louis">Washington University in St. Louis</option>
+                            <option value="Fontbonne University">Fontbonne University</option>
+                            <option value="Saint Louis University">Saint Louis University</option>
                         </select><br>
                     </div>
                 </div>
